--- a/Quattra Comando/style.css
+++ b/Quattra Comando/style.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     text-align: center;
-    background-image: url("images/fundo2.jpg");
+    background-image: url("images/fundo2.png");
     font-family: fantasy;
     align-items: center;
   }
